RESOLVED FIXED277938
Introducing CONJECTURE_ASSERT.
https://bugs.webkit.org/show_bug.cgi?id=277938
Summary Introducing CONJECTURE_ASSERT.
Mark Lam
Reported 2024-08-11 19:41:01 PDT
CONJECTURE_ASSERT is only used to facilitate on-going analysis work to test conjectures about the code. We want to be able to land these in the code base for some time to enable extended testing. If the conjecture is proven false it, the CONJECTURE_ASSERT should either be removed or updated to test a new conjecture. If the conjecture is proven true, the CONJECTURE_ASSERT should either be promoted to an ASSERT or RELEASE_ASSERT as appropriate, or removed if deemed of low value. The number of CONJECTURE_ASSERTs should not be growing unboundedly, and they should not stay in the code base perpetually.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-11 19:41:25 PDT
Mark Lam
Comment 2 2024-08-11 19:55:33 PDT
EWS
Comment 3 2024-08-12 13:12:34 PDT
Committed 282132@main (70cc817deff2): <https://commits.webkit.org/282132@main> Reviewed commits have been landed. Closing PR #32024 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.