Source/WTF/wtf/PlatformEnable.h
@@ -104,6 +104,10 @@
 
 /* Do not use PLATFORM() tests in this section ! */
 
+#if !defined(ENABLE_CONJECTURE_ASSERT)
+#define ENABLE_CONJECTURE_ASSERT 0
+#endif
+
 #if !defined(ENABLE_ACCESSIBILITY_ANIMATION_CONTROL)
 #define ENABLE_ACCESSIBILITY_ANIMATION_CONTROL 0
 #endif
